--- a/.github/workflows/01-building-blocks.yaml
+++ b/.github/workflows/01-building-blocks.yaml
@@ -12,8 +12,8 @@ jobs:
     steps:
       - name: Failed step 
         run: |
-          echo "I will fail"
-          exit 1
+          echo "I will suceed"
+          exit 0
       - name: Say goodbye 
         run: echo "good bye"
       
