--- a/.github/workflows/03-building-blocks.yaml
+++ b/.github/workflows/03-building-blocks.yaml
@@ -10,3 +10,10 @@ jobs:
               run: |
                 echo "This job is running on ubuntu os"
                 echo "Runner OS: $RUNNER_OS"
+    windows-echo:
+        runs-on: windows-latest
+        steps:
+          - name: show os 
+            run: |
+                echo "This job is running on windows os"
+                echo "Runner OS: $RUNNER_OS"
