--- a/.github/workflows/03-building-blocks.yaml
+++ b/.github/workflows/03-building-blocks.yaml
@@ -14,6 +14,7 @@ jobs:
         runs-on: windows-latest
         steps:
           - name: show os 
+            shell: bash 
             run: |
                 echo "This job is running on windows os"
                 echo "Runner OS: $RUNNER_OS"
