03-building-block: mac runner

--- a/.github/workflows/03-building-blocks.yaml
+++ b/.github/workflows/03-building-blocks.yaml
@@ -18,3 +18,11 @@ jobs:
             run: |
                 echo "This job is running on windows os"
                 echo "Runner OS: $RUNNER_OS"
+
+    mac-echo:
+        runs-on: mac-latest
+        steps:
+            - name: show os
+              run: |
+                echo "This job is running on mac os"
+                echo "Runner OS: $RUNNER_OS"
