--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -38,4 +38,4 @@ jobs:
     - name: Run tests
       run: |
         source venv/bin/activate
-        python helloworldmanage.py test
+        python helloworld/manage.py test
