--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -17,5 +17,17 @@ jobs:
               with:
                 python-version: '3.9'
 
+            - name: Install Dependencies
+              run: |
+                python -m venv venv 
+                source venv/bin/active
+                pip install --upgrade pip
+                pip install -r requirements.txt
+
+            - name: Run migration
+              run: |
+                source venv/bin/activate
+                python helloworld/manage.py migrate 
+
 
             
