--- a/.github/workflows/django-ci.yml
+++ b/.github/workflows/django-ci.yml
@@ -20,7 +20,7 @@ jobs:
             - name: Install Dependencies
               run: |
                 python -m venv venv 
-                source venv/bin/active
+                source venv/bin/activate
                 pip install --upgrade pip
                 pip install -r requirements.txt
 
