--- a/.github/workflows/contexts.yaml
+++ b/.github/workflows/contexts.yaml
@@ -28,8 +28,8 @@ jobs:
             echo "variable value: ${{ vars.APP_DEBUG }}"
 
       - name: Print Env Variables
-        env:
-            MY_OVERWRITTEN_VAR: 'step'
+        # env:
+        #     MY_OVERWRITTEN_VAR: 'step'
         run: |
             echo "Workflow env: ${{ env.MY_WORKFLOW_VAR }}"
             echo "Overwritten env: ${{ env.MY_OVERWRITTEN_VAR }}"
