--- a/.github/workflows/contexts.yaml
+++ b/.github/workflows/contexts.yaml
@@ -28,8 +28,20 @@ jobs:
             echo "variable value: ${{ vars.APP_DEBUG }}"
 
       - name: Print Env Variables
-        # env:
-        #     MY_OVERWRITTEN_VAR: 'step'
+        env:
+            MY_OVERWRITTEN_VAR: 'step'
         run: |
             echo "Workflow env: ${{ env.MY_WORKFLOW_VAR }}"
             echo "Overwritten env: ${{ env.MY_OVERWRITTEN_VAR }}"
+      - name: Print Env Variables 2
+        run: |
+            echo "Workflow env: ${{ env.MY_WORKFLOW_VAR }}"
+            echo "Overwritten env: ${{ env.MY_OVERWRITTEN_VAR }}"
+
+  echo-data2:
+    runs-on: ubuntu-latest
+    steps:
+        - name: Print Env Variables 3
+          run: |
+            echo "Workflow env: $MY_WORKFLOW_VAR"
+            echo "Overwritten env: $MY_OVERWRITTEN_VAR"
