--- a/.github/workflows/contexts.yaml
+++ b/.github/workflows/contexts.yaml
@@ -1,7 +1,13 @@
 name: context practice
+run-name: context | DEBUG - ${{ inputs.debug }}
+
 on: 
     push:
     workflow_dispatch: 
+        inputs:
+          debug:
+            type: boolean
+            default: false
 
 jobs:
   echo-data:
