--- a/.github/workflows/variables.yaml
+++ b/.github/workflows/variables.yaml
@@ -1,53 +1,30 @@
-name: variables
+# See 09-functions/README.md for more information
+# about using functions in workflows, as well as
+# commonly used functions and their features.
+
+name: 09 - Using Functions
 
 on:
-    push: 
-    workflow_dispatch: 
-
-env:
-    WORKFLOW_VAR: 'THIS IS WORLFLOW LWVEL'
-    OVERRIDE: 'OVERRIDE VAR WORKFLOW'
-    UNDEFINED_VAR: ${{ vars.UNDEFINED_VARS || 'default var' }}
+  pull_request:
+  workflow_dispatch:
 
 jobs:
-    echo:
-        runs-on: ubuntu-latest
-        env:
-            JOB_VAR: 'job var'
-
-        steps:
-            - name: ENV VARS
-              env:
-                STEP_VAR: 'Step Var'
-              run: |
-                echo "Step var: ${{ env.STEP_VAR }}"
-                echo "Job Var: ${{ env.JOB_VAR }}"
-                echo "Workflow Var: ${{ env.WORKFLOW_VAR }}"
-                echo "OVR VAR: ${{ env.OVERRIDE }}"
-    echo2:
-        runs-on: ubuntu-latest
-        steps:
-            - name: print variable
-              run: |
-                echo "Org var: ${{ vars.ORG_VAR}}"
-                echo "org overwritten var: ${{ vars.OVERWRITTEN_VAR }}"
-                echo "repo var: ${{ vars.REPOSITORY_VAR }}"
-    echo-prod:
-        runs-on: ubuntu-latest
-        environment: prod
-        steps:
-          - name: print prod vars
-            run: |
-                echo "Org var: ${{ vars.ORG_VAR}}"
-                echo "org overwritten var: ${{ vars.OVERWRITTEN_VAR }}"
-                echo "repo var: ${{ vars.REPOSITORY_VAR }}"
-                echo "target var: ${{ vars.TARGET_VAR}}"
-    echo-undefined:
-        runs-on: ubuntu-latest
-        steps:
-          - name: undefined var 
-            run: |
-                echo "undevined var: ${{ env.UNDEFINED_VAR }}"
-
-
-
+  echo1:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Sleep for 20 seconds
+        run: sleep 15
+      - name: Failing step
+        run: exit 1
+      - name: I will be skipped
+        if: ${{ success() }}
+        run: echo "I will print if previous steps succeed."
+      - name: I will execute
+        if: ${{ failure() }}
+        run: echo "I will print if any previous step fails."
+      - name: I will execute
+        if: ${{ !cancelled() }}
+        run: echo "I will always print, except when the workflow is cancelled."
+      - name: I will execute when cancelled
+        if: ${{ cancelled() }}
+        run: echo "I will print if the workflow has been cancelled."
