--- a/.github/workflows/function.yaml
+++ b/.github/workflows/function.yaml
@@ -9,7 +9,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name:  Sleep for 10 sec
-        run: Sleep 10
+        run: sleep 10
       - name: Failing Step
         run: exit 1
       - name: I will be skipped
